--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "url": "https://github.com/loceyashley/locey_midterm/issues"
   },
   "homepage": "https://github.com/loceyashley/locey_midterm#readme",
-  "engines":{"node":"12.x"},
+  "engines": {
+    "node": "12.x"
+  },
   "dependencies": {
     "ejs": "^3.1.5",
     "express": "^4.17.1",
